[gd_scene load_steps=7 format=2]

[ext_resource path="res://script/approximateSineWave.gd" type="Script" id=1]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.436364 ), 0.0, 0.0, 0, 0, Vector2( 0.442857, 0.818182 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.4 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.0142857, 0.818182 ), 0.0, 0.0, 0, 0, Vector2( 0.519048, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.763636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.681818 ), 0.0, 0.0, 0, 0, Vector2( 0.459459, 0.872727 ), 0.0, 0.0, 0, 0, Vector2( 0.968468, 0.554545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0.0045045, 0.254545 ), 0.0, 0.0, 0, 0, Vector2( 0.54955, 0.909091 ), 0.0, 0.0, 0, 0, Vector2( 0.968468, 0.690909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.0810811, 0.690909 ), 0.0, 0.0, 0, 0, Vector2( 0.202703, 0.963636 ), 0.0, 0.0, 0, 0, Vector2( 0.463964, 0.3 ), 0.0, 0.0, 0, 0, Vector2( 0.671171, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.427273 ), 0.0, 0.0, 0, 0 ]

[node name="approximateSineWave" type="Node2D"]
script = ExtResource( 1 )

[node name="perfectSine" type="Line2D" parent="."]
visible = false
width = 3.0

[node name="approxSineWave0" type="Line2D" parent="."]
width = 30.0
width_curve = SubResource( 1 )
default_color = Color( 0.423529, 0.929412, 0.929412, 1 )
texture_mode = 2

[node name="approxSineWave1" type="Line2D" parent="."]
width_curve = SubResource( 2 )
default_color = Color( 0.423529, 0.929412, 0.929412, 1 )

[node name="approxSineWave2" type="Line2D" parent="."]
width_curve = SubResource( 3 )
default_color = Color( 0.423529, 0.929412, 0.929412, 1 )

[node name="approxSineWave3" type="Line2D" parent="."]
width_curve = SubResource( 4 )
default_color = Color( 0.423529, 0.929412, 0.929412, 1 )

[node name="approxSineWave4" type="Line2D" parent="."]
width_curve = SubResource( 5 )
default_color = Color( 0.423529, 0.929412, 0.929412, 1 )
